--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discord-interactions": "^3.3.0",
     "discord-player": "^5.4.0",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ffmpeg-static": "^5.1.0"
   },
   "name": "ch-discord-bot",
   "version": "1.0.0",
